--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React Hooks + Redux - User Registration and Login Example & Tutorial</title>
+    <title>CrowdSource</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <style>
+
+  <style>
         a { cursor: pointer; }
     </style>
 </head>
